# sockcp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  opt_clang.cfg  opt_msvc.cfg  opt_unix.cfg  proj.bat  proj.sh  project.cfg
cmake/: EnableGoogleTest.cmake  LoadOptions.cmake  SetGlobalDefines.cmake  SetPlatformFlags.cmake
include/sockcp/: adapter.h  address.h  error.h  errors.h  inet_address.h  socket.h  socket_buffer.h  socket_observer.h  unix_addr.h  unix_address.h  wininit.h
src/testing/: client.cc  client_waiting.cc  server.cc  server_delayed.cc
tests/: ipv4_tests.cc
